UI losing buttons *CAN'T REDO* #30858

Closed
opened 2012-04-08 02:54:55 +02:00 by Jay Miller · 14 comments

%%%This has happened twice now, not sure what triggers it though. Suddenly all of the buttons disappear, and tab switch from edit to obj mode stops working- I can still select things in the 3D viewport though, and also the pulldown arrows work but display nothing. Using official 2.62, ubuntu 10.10 64 bit, nvidia 9600GT with driver 270.41.06 It's happened on 2 seemingly different occasions, once while adjusting a mesh with an array modifier, and another while changing the sunlight settings, or between renderings (f12).%%%

%%%This has happened twice now, not sure what triggers it though. Suddenly all of the buttons disappear, and tab switch from edit to obj mode stops working- I can still select things in the 3D viewport though, and also the pulldown arrows work but display nothing. Using official 2.62, ubuntu 10.10 64 bit, nvidia 9600GT with driver 270.41.06 It's happened on 2 seemingly different occasions, once while adjusting a mesh with an array modifier, and another while changing the sunlight settings, or between renderings (f12).%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I put about 6-8 hours in with a build from fish on graphicall, 45447 with no UI issues (he builds on 10.10). I will have to do some testing with a recent buildbot build to see if it's been fixed.%%%

%%%I put about 6-8 hours in with a build from fish on graphicall, 45447 with no UI issues (he builds on 10.10). I will have to do some testing with a recent buildbot build to see if it's been fixed.%%%

%%%I've heard about this issue before, but haven't been able to reproduce. If you're running this from a terminal it will probably show a useful python error to investigate this, without that or some steps to redo the problem, there's not much we can do here.%%%

%%%I've heard about this issue before, but haven't been able to reproduce. If you're running this from a terminal it will probably show a useful python error to investigate this, without that or some steps to redo the problem, there's not much we can do here.%%%

%%%Also can think some addon might do funky stuff. Are you using some non-default addons and if so maybe you might try disable them and see if it works?%%%

%%%Also can think some addon might do funky stuff. Are you using some non-default addons and if so maybe you might try disable them and see if it works?%%%
Author

%%%The 2.62 build was straight from the blender.org site, no custom settings at all (yeah I'm that hardcore :P). Also, logged in about 5 more hours with the fish build, no issues. If I proceed with testing official builds, would it be better to keep using 2.62 or a build from the buildbot? Thanks for the great tool Blender team!
%%%

%%%The 2.62 build was straight from the blender.org site, no custom settings at all (yeah I'm that hardcore :P). Also, logged in about 5 more hours with the fish build, no issues. If I proceed with testing official builds, would it be better to keep using 2.62 or a build from the buildbot? Thanks for the great tool Blender team! %%%

%%%Which build you use for testing this doesn't matter all that much, it doesn't seem like an issue that would be related to a specific build. I've had it reported some months ago on a Mac, but there was also no way to redo it. It might have been fixed accidentally as part of another problem but it seems random enough we can't tell.%%%

%%%Which build you use for testing this doesn't matter all that much, it doesn't seem like an issue that would be related to a specific build. I've had it reported some months ago on a Mac, but there was also no way to redo it. It might have been fixed accidentally as part of another problem but it seems random enough we can't tell.%%%

%%%The same thing happened to me as well. At first i noticed it in combination with luxblend when the render was aborted. But it happend to me in cycles as well and also if a render was aborted, either inside the rendered preview or a normal render. Must be some kind of synchronization problem if the render-thread dies.%%%

%%%The same thing happened to me as well. At first i noticed it in combination with luxblend when the render was aborted. But it happend to me in cycles as well and also if a render was aborted, either inside the rendered preview or a normal render. Must be some kind of synchronization problem if the render-thread dies.%%%

%%%I experienced that as well, mostly by using different render engines. But it's indeed very random and not easy to reproduce. %%%

%%%I experienced that as well, mostly by using different render engines. But it's indeed very random and not easy to reproduce. %%%
Author

%%%I think in the near future I will test this in the -d mode, in the official build. It happened twice in two sessions in the official build, while not in the fish build (which has some extra patches included, so it's weird that it was more stable). I assume everyone experiencing this is using Linux 64 bit?%%%

%%%I think in the near future I will test this in the -d mode, in the official build. It happened twice in two sessions in the official build, while not in the fish build (which has some extra patches included, so it's weird that it was more stable). I assume everyone experiencing this is using Linux 64 bit?%%%

%%%We managed to reproduce this at the Blender Institute, fix is in svn. It may not cover all cases, we'll find out, but the main issue when rendering with cycles should be solved.%%%

%%%We managed to reproduce this at the Blender Institute, fix is in svn. It may not cover all cases, we'll find out, but the main issue when rendering with cycles should be solved.%%%
Member

%%%Hi
Unfortunately this issue shows up his ugly head more than ever again with b2.64a and later.
With external renderer it get really annoying sometimes, although the crashes are ramdom.
Experiences go far alo for lux-users: http://www.luxrender.net/forum/viewtopic.php?f=16&t=9118&sid=f33dafc02613f2a84ad914ea75948259#p87013

We should really get rid of this, nowadys i have phases where this takes all the fun away by collapsing every few minutes.

Jens%%%

%%%Hi Unfortunately this issue shows up his ugly head more than ever again with b2.64a and later. With external renderer it get really annoying sometimes, although the crashes are ramdom. Experiences go far alo for lux-users: http://www.luxrender.net/forum/viewtopic.php?f=16&t=9118&sid=f33dafc02613f2a84ad914ea75948259#p87013 We should really get rid of this, nowadys i have phases where this takes all the fun away by collapsing every few minutes. Jens%%%
Member

%%%See attached file HANDLER.blend, it should always reproduce such a bug

Run script, render animation, UI should lose buttons on 2nd rendered frame%%%

%%%See attached file HANDLER.blend, it should always reproduce such a bug Run script, render animation, UI should lose buttons on 2nd rendered frame%%%

%%%Fix in svn, by restricting context access from threads so they can't influence UI context. Both this example script and luxrender still work fine without any changes needed in my tests.%%%

%%%Fix in svn, by restricting context access from threads so they can't influence UI context. Both this example script and luxrender still work fine without any changes needed in my tests.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30858
No description provided.